apps/wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-praxis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ""
      component: ""
  template:
    metadata:
      labels:
        app: ""
    spec:
      securityContext:
        runAsNonRoot: true       
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: "wanaku-praxis"
          image: quay.io/wanaku/wanaku-praxis:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 10
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 30
          volumeMounts:
            - mountPath: /data/registry
              name: praxis-volume
      volumes:
        - name: praxis-volume
          persistentVolumeClaim:
            claimName: praxis-volume-claim
