apps/wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ""
      component: ""
  template:
    metadata:
      labels:
        app: ""
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: "wanaku-mcp-router"
          image: quay.io/wanaku/wanaku-barn-backend:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /q/health/live
              port: 8180
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
          ports:
            - containerPort: 8180
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8180
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8180
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - mountPath: /home/default/.wanaku/barn
              name: router-volume
      volumes:
        - name: router-volume
          persistentVolumeClaim:
            claimName: router-volume-claim
