apps/wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ""
    component: ""
  name: ""
spec:
  ports:
    - name: 4180-tcp
      port: 4180
      protocol: TCP
      targetPort: 4180
    - name: 4181-tcp
      port: 4181
      protocol: TCP
      targetPort: 4181
  selector:
    app: ""
  sessionAffinity: None
  type: ClusterIP
