apps/wanaku-operator/src/main/resources/ai/wanaku/operator/wanaku/wanaku-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ""
  name: ""
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: ""
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ""
                port:
                  number: 9090
